--- a/src/styles/components/website/Footer.css
+++ b/src/styles/components/website/Footer.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Moderustic:wght@400;800&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=OpenSans:wght@400;600&display=swap');*/
 
 .footer {
   padding: 40px 20px;
@@ -51,8 +52,8 @@
 }
 
 .footer-column h4 {
-  font-size: 20px;
-  font-weight: 700;
+  font-size: 18px;
+  font-weight: 600;
   color: #ffffff;
   margin-bottom: 10px;
 }
