--- a/src/styles/components/website/BlogSection.css
+++ b/src/styles/components/website/BlogSection.css
@@ -47,6 +47,7 @@ h2 {
     padding: 15px;
     margin-bottom: 15px;
     transition: transform 0.3s ease;
+    justify-content: space-between;
 }
   
 .blog-avatar {
@@ -61,19 +62,22 @@ h2 {
     flex-direction: column;
     justify-content: center;
     margin-right: auto;
+    
 }
   
 .blog-info h4 {
     color: white;
     margin: 0;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
 }
   
 .blog-status {
     display: flex;
     align-items: center;
+    text-align: justify;
     color: white;
+    margin-right: 5px;
     font-size: 12px;
 }
   
@@ -106,17 +110,17 @@ h2 {
     }
 }
   
-.follow-button {
+.read-button {
     background-color: #ffffff;
     color: rgb(0, 0, 0);
     border: none;
     border-radius: 20px;
-    padding: 8px 15px;
+    padding: 8px 10px;
     font-size: 14px;
     cursor: pointer;
 }
   
-.follow-button:hover {
+.read-button:hover {
     background-color: #52575c;
 }
   
