--- a/src/styles/blog/Menu.css
+++ b/src/styles/blog/Menu.css
@@ -48,7 +48,7 @@
 
 .tab-content {
   padding: 20px;
-  background-color: #f8f8f8;
+  background-color: #0b0b0b;
   text-align: left;
   min-height: 200px;
   max-width: 1220px;
