--- a/src/styles/blog/StatusBox.css
+++ b/src/styles/blog/StatusBox.css
@@ -81,7 +81,7 @@
 }
 
 /* Modal Styling */
-.network-modal {
+.blog-modal {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -90,14 +90,14 @@
     padding: 20px;
     border-radius: 8px;
     width: 80%;
-    max-width: 600px;
+    max-width: 400px;
     outline: none;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     font-family: 'Moderustic', sans-serif;
     z-index: 1000; /* Ensures the modal is above all other elements */
 }
 
-.network-modal-overlay {
+.blog-modal-overlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -107,19 +107,21 @@
     z-index: 999; /* Ensures the overlay is below the modal but above other content */
 }
 
-.network-title {
+.blog-title {
     margin-bottom: 10px;
     color: #000000;
     font-size: 18px;
+    text-align: center;
 }
 
-.network-grid {
+.blog-grid {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    justify-content: space-between; /* Untuk mengatur jarak antar elemen */
 }
 
-.network-item {
+.blog-item {
     background-color: #F0F0F0;
     padding: 10px 20px;
     border-radius: 5px;
@@ -131,18 +133,20 @@
     text-decoration: none;
     color: #000000;
     transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    flex: 1 1 calc(50% - 10px); /* Membagi menjadi 3 kolom dengan jarak antar elemen */
+    box-sizing: border-box; /* Memastikan padding tidak menambah lebar total */
 }
 
-.network-item:hover {
+.blog-item:hover {
     background-color: #e0e0e0;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.network-item span {
+.blog-item span {
     font-weight: 600;
 }
 
-.network-image {
+.blog-image {
     width: 30px;
     height: 30px;
     margin-left: 10px;
