--- a/src/styles/components/website/ResourceSection.css
+++ b/src/styles/components/website/ResourceSection.css
@@ -1,45 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Moderustic:wght@400;800&display=swap');
 
-.feature-section {
+.resource-section {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   gap: 20px;
   margin: 40px auto;
-  max-width: 1200px;
+  max-width: 100%;
   padding: 0 20px;
   font-family: 'Moderustic', sans-serif; /* Gunakan font Nunito */
+  overflow: hidden;
+  align-items: center;
 }
 
-.feature-item {
-  flex: 1;
-  min-width: 300px;
+.resource-item {
+  min-width: 0;
+  max-width: 100%;
   background: #1A1A1A;
   border-radius: 8px;
   padding: 20px;
   position: relative;
+  margin: 0;
+  box-sizing: border-box;
+  text-align: center;
 }
 
-.feature-item h3 {
-  font-size: 24px;
-  font-weight: 700;
+.resource-item h3 {
+  font-size: 39px;
+  font-weight: 400;
   color: #ffffff;
-  margin-bottom: 20px;
+  margin: 10px 0;
   font-family: 'Moderustic', sans-serif; /* Pastikan h3 menggunakan font Nunito */
 }
 
-.feature-content {
+.resource-content {
   display: flex;
   align-items: center;
 }
 
-.feature-content img {
+.resource-content img {
   width: 40px;
   height: 40px;
   margin-right: 20px;
 }
 
-.feature-content p {
+.resource-content p {
   font-size: 18px;
   font-weight: 400;
   color: #ffffff;
@@ -47,7 +52,7 @@
   font-family: 'Moderustic', sans-serif; /* Pastikan paragraf menggunakan font Nunito */
 }
 
-.feature-item::before {
+.resource-item::before {
   content: '';
   position: absolute;
   right: -20px;
@@ -57,26 +62,47 @@
   height: 0;  
 }
 
-.feature-title {
+.resource-title {
   padding: 10px 20px;
   font-family: 'Moderustic', sans-serif;
   max-width: 1200px;
   margin: 0 auto;
 }
 
-.feature-grid {
-  display: flex; /* Gunakan flexbox untuk layout kolom */
-  justify-content: space-between; /* Sebar kolom secara merata */
+.resource-grid {
+  display: grid; /* Gunakan flexbox untuk layout kolom */
+  grid-template-columns: repeat(6, 1fr);
   gap: 20px; /* Jarak antar kolom */
+  width: 100%;
+  box-sizing: border-box;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+.resource-icon {
+    width: 100px;
+    height: 100px;
+    margin-bottom: 10px; /* Tambahkan jarak di bawah icon */
+}
+
+.resource-desc {
+    font-size: 15px;
+    font-weight: 400;
+    color: #ffffff;
+    font-family: 'Moderustic', sans-serif;
 }
 
 @media (max-width: 768px) {
-  .feature-section {
+  .resource-section {
     flex-direction: column;
     gap: 30px;
   }
 
-  .feature-item::before {
+  .resource-item::before {
     display: none; /* Hilangkan panah di perangkat kecil */
+  }
+
+  .resource-item {
+    text-align: left; /* Ubah ke kiri jika diperlukan */
   }
 }
