--- a/src/styles/components/website/Node.css
+++ b/src/styles/components/website/Node.css
@@ -34,8 +34,9 @@ body {
 }
 
 .chain-grid {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  /*flex-direction: column;*/
+  grid-template-columns: repeat(6, 1fr);
   gap: 15px;
 }
 
@@ -48,7 +49,7 @@ body {
   display: flex;
   align-items: center;
   background-color: #ffffff;
-  padding: 10px 20px;
+  padding: 10px 10px;
   border-radius: 8px;
   transition: background-color 0.3s ease, transform 0.3s ease;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
@@ -66,6 +67,6 @@ body {
 }
 
 .chain-item span {
-  font-size: 1rem;
+  font-size: 15px;
   font-weight: 500;
 }
