--- a/src/styles/website/Partnership.css
+++ b/src/styles/website/Partnership.css
@@ -1,25 +1,90 @@
 @import url('https://fonts.googleapis.com/css2?family=Moderustic:wght@400;800&display=swap');
 
-.partnership-section {
-  text-align: center;
-  padding: 40px 20px;
-  font-family: 'Moderustic', sans-serif;
+.partnership-slider {
+  width: 100%;
+  overflow: hidden;
+  padding: 10px 0;
+  position: relative;
 }
 
-.partnership-logos {
+.partnership-track {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
-  flex-wrap: wrap;
-  gap: 40px;
 }
 
-.partner-logo img {
-  max-width: 150px;
-  height: auto;
-  transition: transform 0.3s ease;
+.track-left {
+  animation: scroll-left 30s linear infinite; /* Bergerak ke kiri */
 }
 
-.partner-logo img:hover {
-  transform: scale(1.1);
+.track-right {
+  animation: scroll-right 30s linear infinite; /* Bergerak ke kanan */
+  top: 80px; /* Atur posisi agar tidak bertumpuk */
+}
+
+.partnership-item {
+  flex: 0 0 auto;
+  margin: 0 15px;
+}
+
+.partnership-item img {
+  max-height: 60px; /* Adjust the height to fit your design */
+  transition: transform 0.3s ease-in-out;
+}
+
+.partnership-item img:hover {
+  transform: scale(1.1); /* Slightly enlarge on hover */
+}
+
+.partnership-title {
+  /*padding: 50px 20px;*/
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-family: 'Moderustic', sans-serif;
+  max-width: 1200px;
+  margin: 0 auto;
+  color: white;
+  text-align: center;
+}
+
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0);  /* Mulai dari luar layar sebelah kanan */
+  }
+  100% {
+    transform: translateX(-100%); /* Bergerak ke luar layar sebelah kiri */
+  }
+}
+
+@keyframes scroll-right {
+  0% {
+    transform: translateX(-100%); /* Mulai dari luar layar sebelah kiri */
+  }
+  100% {
+    transform: translateX(0); /* Bergerak ke luar layar sebelah kanan */
+  }
+}
+
+.partnership-container {
+  text-align: center; /* Memastikan konten di tengah secara horizontal */
+  padding: 20px; /* Opsional: Menambah jarak */
+}
+
+.contact-button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #ffffff; /* Warna putih untuk tombol */
+  color: #0b0b0b; /* Warna hitam untuk teks */
+  border: 2px solid #0b0b0b; /* Garis pinggir hitam */
+  border-radius: 8px; /* Membuat sudut melengkung */
+  text-decoration: none; /* Hilangkan garis bawah */
+  font-size: 16px; /* Ukuran font */
+  font-weight: bold; /* Teks lebih tebal */
+  cursor: pointer;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.contact-button:hover {
+  background-color: #0b0b0b; /* Warna hitam saat hover */
+  color: #ffffff; /* Warna putih untuk teks saat hover */
 }
