--- a/src/styles/website/Partnership.css
+++ b/src/styles/website/Partnership.css
@@ -9,7 +9,7 @@
 
 .partnership-track {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
 }
 
@@ -28,7 +28,10 @@
 }
 
 .partnership-item img {
-  max-height: 60px; /* Adjust the height to fit your design */
+  /*max-height: 60px; /* Adjust the height to fit your design */
+  width: 80px; /* Sesuaikan dengan kebutuhan */
+  height: 80px;
+  object-fit: contain;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -52,13 +55,13 @@
     transform: translateX(0);  /* Mulai dari luar layar sebelah kanan */
   }
   100% {
-    transform: translateX(-100%); /* Bergerak ke luar layar sebelah kiri */
+    transform: translateX(-50%); /* Bergerak ke luar layar sebelah kiri */
   }
 }
 
 @keyframes scroll-right {
   0% {
-    transform: translateX(-100%); /* Mulai dari luar layar sebelah kiri */
+    transform: translateX(-50%); /* Mulai dari luar layar sebelah kiri */
   }
   100% {
     transform: translateX(0); /* Bergerak ke luar layar sebelah kanan */
