--- a/src/styles/website/JalanMenu.css
+++ b/src/styles/website/JalanMenu.css
@@ -4,22 +4,25 @@
   width: 100%;
   overflow: hidden;
   padding: 10px 0;
+  position: relative;
 }
 
 .logo-track {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   animation: scroll 30s linear infinite;
 }
 
 .logo-item {
   flex: 0 0 auto;
-  margin: 0 15px;
+  margin: 0 75px;
 }
 
 .logo-item img {
-  max-height: 60px; /* Adjust the height to fit your design */
+  width: 100px; /* Sesuaikan dengan kebutuhan */
+  height: 100px;
+  object-fit: contain;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -32,6 +35,6 @@
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-100%);
+    transform: translateX(-50%);
   }
 }
