--- a/src/styles/website/Node.css
+++ b/src/styles/website/Node.css
@@ -30,7 +30,8 @@ body {
   font-weight: bold;
   color: #ffffff;
   margin-bottom: 20px;
-  margin-left: 20px; /* Shift the title to the left */
+  /*margin-left: 20px; /* Shift the title to the left */
+  text-align: center;
 }
 
 .chain-grid {
