--- a/src/styles/website/JalanMenu.css
+++ b/src/styles/website/JalanMenu.css
@@ -16,12 +16,12 @@
 
 .logo-item {
   flex: 0 0 auto;
-  margin: 0 75px;
+  margin: 0 50px;
 }
 
 .logo-item img {
-  width: 100px; /* Sesuaikan dengan kebutuhan */
-  height: 100px;
+  width: 80px; /* Sesuaikan dengan kebutuhan */
+  height: 80px;
   object-fit: contain;
   transition: transform 0.3s ease-in-out;
 }
@@ -35,6 +35,16 @@
     transform: translateX(0);
   }
   100% {
-    transform: translateX(-50%);
+    transform: translateX(-100%);
+  }
+}
+
+@media (max-width: 768px) {
+  .logo-item {
+    margin: 0 20px;
+  }
+  .logo-item img {
+    width: 60px;
+    height: 60px;
   }
 }
